// Copyright (c) Shubham Mishra. All rights reserved.
// Licensed under the MIT License.

syntax = "proto3";

package proto.peerreview;

message ProtoPeerReviewLogEntryContent {
    oneof content {
        ProtoPeerReviewLogEntryContentSend send = 1;
        ProtoPeerReviewLogEntryContentRecv recv = 2;
    }
}

message ProtoPeerReviewLogEntryContentSend {
    string receiver = 1;
    bytes message = 2;
}

message ProtoPeerReviewLogEntryContentRecv {
    string sender = 1;
    uint64 sender_seq_num = 2;
    bytes message = 3;
}

message ProtoPeerReviewLogEntry {
    uint64 seq_num = 1;
    bytes parent_hash = 2;
    ProtoPeerReviewLogEntryContent content = 3;
    bytes signature = 4;
}